Add words to the spellchecking dictionary

--- a/codebook.toml
+++ b/codebook.toml
@@ -1,7 +1,10 @@
 dictionaries = []
 words = [
+    "abl",
+    "att",
     "betterrolls",
     "brsw",
+    "dmg",
     "globals",
     "popout",
     "popouts",
