Add words (and typos hard to refactor) to spellcheck dictionary

--- a/codebook.toml
+++ b/codebook.toml
@@ -1,15 +1,27 @@
 dictionaries = []
 words = [
     "abl",
+    "atribute",
     "att",
+    "behaviour",
     "betterrolls",
     "brsw",
     "dmg",
+    "dsn",
+    "fas",
     "globals",
+    "hotbar",
+    "modifers",
+    "namespaced",
+    "npc",
+    "optinal",
     "popout",
     "popouts",
+    "preloaded",
     "rerolls",
     "swade",
+    "swd",
+    "undead",
     "unshake",
     "unstun",
     "vehicle_actor",
