--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "eslint": "^9.19.0",
     "flowbite": "^1.6.6"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "eslint": "^9.19.0"
   }
 }
